--- a/examples/react-material-ui-datatable/public/index.html
+++ b/examples/react-material-ui-datatable/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Ui</title>
+    <title>React Material-UI DataTable</title>
   </head>
 
   <body>
